<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:theme="@style/add_meeting">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_meeting_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_meeting_owner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fields_horizontal_spacing"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="@dimen/add_fields_spacing"
                android:drawableStart="@drawable/ic_baseline_emoji_people_24"
                android:hint="@string/hint_owner"
                android:paddingHorizontal="12dp"
                app:drawableTint="@color/blue"
                app:layout_constraintBottom_toTopOf="@id/add_meeting_topic_til"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="@dimen/max_width"
                tools:text="@tools:sample/first_names" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_meeting_topic_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fields_horizontal_spacing"
                android:layout_marginVertical="@dimen/add_fields_spacing"
                android:hint="@string/hint_topic"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/add_meeting_participants_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_owner"
                app:layout_constraintWidth_max="@dimen/max_width"
                app:startIconDrawable="@drawable/ic_baseline_contact_support_24"
                app:startIconTint="@color/blue"
                tools:text="@tools:sample/lorem">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_meeting_topic_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/add_meeting_participants_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fields_horizontal_spacing"
                android:layout_marginVertical="@dimen/add_fields_spacing"
                app:chipSpacingVertical="2dp"
                app:layout_constraintBottom_toTopOf="@id/add_meeting_participants_til"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_topic_til"
                app:layout_constraintWidth_max="@dimen/max_width" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_meeting_participants_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fields_horizontal_spacing"
                android:layout_marginVertical="@dimen/add_fields_spacing"
                android:hint="@string/hint_participant"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/add_meeting_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_participants_group"
                app:layout_constraintWidth_max="@dimen/max_width"
                app:startIconDrawable="@drawable/ic_baseline_person_add_24"
                app:startIconTint="@color/blue"
                tools:text="@tools:sample/full_names">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_meeting_participants_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_meeting_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fields_horizontal_spacing"
                android:layout_marginVertical="@dimen/add_fields_spacing"
                app:layout_constraintBottom_toTopOf="@id/add_meeting_end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_participants_til"
                app:layout_constraintWidth_max="@dimen/max_width"
                tools:text="@tools:sample/date/hhmm" />

            <TextView
                android:id="@+id/time_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_start"
                app:layout_constraintBottom_toTopOf="@id/add_meeting_end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@tools:sample/lorem" />

            <Button
                android:id="@+id/add_meeting_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fields_horizontal_spacing"
                android:layout_marginVertical="@dimen/add_fields_spacing"
                app:layout_constraintBottom_toTopOf="@id/add_meeting_room"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_start"
                app:layout_constraintWidth_max="@dimen/max_width"
                tools:text="@tools:sample/date/hhmm" />

            <TextView
                android:id="@+id/room_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/add_meeting_room"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@tools:sample/lorem" />

            <Button
                android:id="@+id/add_meeting_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fields_horizontal_spacing"
                android:layout_marginTop="@dimen/add_fields_spacing"
                android:layout_marginBottom="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_end"
                app:layout_constraintWidth_max="@dimen/max_width"
                tools:text="@tools:sample/cities" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_meeting_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@tools:sample/us_zipcodes" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/floating_button"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
