<resources>
    <string name="app_name">Ma réu</string>
    <string name="floating_button">Create meeting</string>
    <string name="delete_meeting">Delete Meeting</string>
    <string name="hint_owner">Meeting owner email</string>
    <string name="hint_topic">Meeting topic</string>
    <string name="hint_participant">Add a participant email</string>
    <string name="filter_by_room">Displayed meeting rooms</string>
    <string name="free_rooms_dialog_title">Free rooms list to pick from</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="phone_owner_email">chuck@buymore.com</string>
    <string name="select_room">Select a room</string>
    <string name="email_error">Enter a valid email address</string>
    <string name="topic_error">Set a topic</string>
    <string name="already_an_attendee">already an attendee</string>
    <string name="stop_before_start">stop before start</string>
    <string name="no_meeting_room">no meeting room</string>
    <string name="room_too_small">room too small</string>
    <string name="room_not_free">room not free</string>
    <string name="do_not_add_yourself">do not add yourself</string>
    <string name="set_start_time">set start time</string>
    <string name="set_end_time">set end time</string>
    <string name="set_filter_time">set filter time</string>
</resources>
