<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.openclassrooms.mareu.ui.main.MainActivity">
    <item
        android:id="@+id/filter_room"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_location_on_24"
        app:showAsAction="always"
        android:title="@string/filter_by_room" />

    <item
        android:id="@+id/filter_date"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_today_24"
        app:showAsAction="ifRoom"
        android:title="@string/filter_by_room" />

</menu>
